src/snapshots/fmtt__tests__markdown_headers_separators.snap
---
source: src/tests.rs
expression: "&formatted"
---
# Header 1
body
---
## Header 2
content
===
###### Header 6
####### This is just ordinary text, not a header.
