src/snapshots/fmtt__tests__markdown_ordered_list.snap
---
source: src/tests.rs
expression: "&formatted"
---
1. Lorem ipsum dolor sit amet
2. consectetur adipiscing elit
3. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
