src/snapshots/fmtt__tests__markdown_unordered_list.snap
---
source: src/tests.rs
expression: "&formatted"
---
- Lorem ipsum dolor sit amet
- consectetur adipiscing elit
* Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
